# MiModel

./: .gitignore  Cargo.toml  LICENSE  README.md  sw280_case.stl  sw280_watch_case.py  sw280_watch_case.step  sw280_watch_case.stl
docs/superpowers/plans/: 2026-03-16-ai3d-implementation.md  2026-03-16-mimodel-tui.md  2026-03-16-phase-machine-implementation.md  (+3 more)
mcp/: server.py
prompts/: assembly.md  build.md  component.md  decompose.md  refine.md  refinement.md  spec.md  system.md
prompts/knowledge/: clearances-and-tolerances.md  defaults.md  enclosure-design.md  mounting-and-fastening.md  resin-printing-constraints.md  spatial-layout.md
python/: environment.yml  pyproject.toml
python/src/ai3d_cad/: __init__.py  __main__.py  analyzer.py  assembler.py  builder.py  openscad.py  paramset.py
python/tests/: test_analyzer.py  test_assembler.py  test_builder.py  test_openscad.py  test_paramset.py  test_validate.py  test_version.py
references/: m3_shcs.toml  m3x5x4_threaded_insert.toml
src/: assembly.rs  claude.rs  claude_bridge.rs  component.rs  config.rs  event_handler.rs  image.rs  main.rs  model_session.rs  parser.rs  phase.rs  phase_dispatch.rs  preview.rs  prompt_builder.rs  python.rs  reference.rs  reference_detect.rs  render.rs  session_manager.rs  spec.rs  stl.rs  usage.rs  viewer.rs
src/storage/: mod.rs  project.rs  session.rs
src/tui/: component_list.rs  component_tree.rs  conversation.rs  input_bar.rs  layout.rs  mod.rs  model_panel.rs  param_editor.rs  project_tree.rs  right_panel.rs  spec_panel.rs  status_bar.rs
tests/: integration.rs
(+6 files in other folders)
