[package]
name = "mimodel"
version = "0.2.0"
edition = "2021"
description = "Interactive 3D model generator using Claude CLI"

[[bin]]
name = "mimodel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["bracketed-paste"] }
ratatui = "0.29"
tui-textarea = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
tempfile = "3"
wait-timeout = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
